# ieskf_slam

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  init.txt  opt.txt  package.xml  plot_results.py  pose_graph_3d.cpp  pose_graph_3d_error_term.h  read_g2o.hpp  sphere_data.g2o.txt  test_g2o.g2o  types.h
config/: avia.yaml  velodyne.yaml
include/ieskf_slam/: globaldefine.h
include/ieskf_slam/math/: SO3.h  SO3.hpp  geometry.h  geometry.hpp  math.h  math.hpp
include/ieskf_slam/modules/: module_base.h
include/ieskf_slam/modules/backend/: backend.h
include/ieskf_slam/modules/frontbackPropagate/: frontback_propagate.h
include/ieskf_slam/modules/frontend/: frontend.h  lio_zh_model.h  lio_zh_model.hpp
include/ieskf_slam/modules/ieskf/: ieskf.h
include/ieskf_slam/modules/map/: rect_map_manager.h
include/ieskf_slam/modules/optimizer/: ceres_pg_opt.hpp  opt_type.h  pose_graph_3d_error_term.h
include/ieskf_slam/modules/pose_graph_opt/: pose_graph_3d_error_term.h  pose_graph_opt.h
include/ieskf_slam/modules/scancontext/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.h
include/ieskf_slam/type/: base_type.h  frame.h  imu.h  measure_group.h  point.h  pointcloud.h  pose.h  timestamp.h
include/wrapper/ros_noetic/: ieskf_backend_noetic_wrapper.h  ieskf_frontend_noetic_wrapper.h  ieskf_slam_wrapper.h
include/wrapper/ros_noetic/lidar_process/: avia_process.h  common_lidar_process_interface.h  velodyne_process.h
launch/: avia.launch  backend.launch  velodyne.launch
lib/colorful_terminal/: colorful_terminal.hpp
lib/scan_context/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.cpp  Scancontext.h  tictoc.h
msg/: CloudWithPose.msg
result/: m2dgr_street05.txt
rviz/: show.rviz
src/app/ros_noetic/: ieskf_noetic_backend_node.cpp  ieskf_noetic_running_node.cpp
src/ieskf_slam/modules/backend/: backend.cpp
src/ieskf_slam/modules/frondend/: frontend.cpp
src/ieskf_slam/modules/frontback_propagate/: frontback_propagate.cpp
src/ieskf_slam/modules/ieskf/: ieskf.cpp
src/ieskf_slam/modules/map/: rect_map_manager.cpp
src/ieskf_slam/modules/pose_graph_opt/: pose_graph_opt.cpp
src/ieskf_slam/modules/scancontext/: Scancontext.cpp
src/ieskf_slam/type/: frame.cpp
src/wrapper/ros_noetic/: ieskf_backend_noetic_wrapper.cpp  ieskf_frontend_noetic_wrapper.cpp  ieskf_noetic_wrapper.cpp  ieskf_slam_wrapper.cpp
